# ot-harjoitusty-

./: .gitgnore  .gitignore  .pylintrc  README.md
chess/: .coverage  .coveragerc  pyproject.toml  tasks.py
chess/htmlcov/: _home_ytuukka__cache_pypoetry_virtualenvs_chess-S6YINWnT-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_ytuukka__cache_pypoetry_virtualenvs_chess-S6YINWnT-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_ytuukka__cache_pypoetry_virtualenvs_chess-S6YINWnT-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_ytuukka__cache_pypoetry_virtualenvs_chess-S6YINWnT-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  _home_ytuukka__cache_pypoetry_virtualenvs_chess-S6YINWnT-py3_8_lib_python3_8_site-packages__pytest__code_source_py.html  (+99 more)
chess/src/: attack.py  gamestate.py  main.py  pieces.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  työaikakirjanpito.md  vaatimuusmaarittely.md  vaatimuusmäärittely.md
laskarit/: gitlog.txt
shakki/: .coveragerc  .env  pyproject.toml  tasks.py
shakki/src/: attack.py  chesslib.py  config.py  db_connection.py  gamestate.py  index.py  initialize_db.py  main.py  pieces.py
shakki/src/gamelogic/: attack.py  chesslib.py  gamestate.py  pieces.py
shakki/src/repositories/: match_history_repository.py
shakki/src/tests/: attack_test.py  database_test.py  gamestate_test.py  pieces_test.py
shakki/src/ui/: black_wins.py  draw.py  end_screen.py  match_history.py  menu.py  someone_wins.py  ui.py  username_select.py  white_wins.py
(+18 files in other folders)
